test/integration/bad/tabs_error_line.stan
// test of visual alignment of errors

transformed data {
  int<lower=0> some_long_line =
    				    		1 4;

}
